unpackaged/main/default/objects/Financial_Account__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>403(b)</fullName>
            </value>
            <value>
                <fullName>457</fullName>
            </value>
            <value>
                <fullName>529 Plan</fullName>
            </value>
            <value>
                <fullName>ABLE</fullName>
            </value>
            <value>
                <fullName>Beneficiary IRA</fullName>
            </value>
            <value>
                <fullName>Brokerage Link</fullName>
            </value>
            <value>
                <fullName>C-Corp</fullName>
            </value>
            <value>
                <fullName>Community Property</fullName>
            </value>
            <value>
                <fullName>Community Property WROS</fullName>
            </value>
            <value>
                <fullName>Conservatorship</fullName>
            </value>
            <value>
                <fullName>Coverdell ESA</fullName>
            </value>
            <value>
                <fullName>Defined Benefit Plan</fullName>
            </value>
            <value>
                <fullName>Defined Contribution Plan</fullName>
            </value>
            <value>
                <fullName>Donor Advised Fund</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Health Savings Account</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Individual 401(k)</fullName>
            </value>
            <value>
                <fullName>Individual Roth 401(k)</fullName>
            </value>
            <value>
                <fullName>Individual TOD</fullName>
            </value>
            <value>
                <fullName>Inherited IRA</fullName>
            </value>
            <value>
                <fullName>Inherited Roth</fullName>
            </value>
            <value>
                <fullName>Irrevocable Trust</fullName>
            </value>
            <value>
                <fullName>Joint Tenant</fullName>
            </value>
            <value>
                <fullName>Joint Tenants by the Entirety</fullName>
            </value>
            <value>
                <fullName>Joint Tenants in Common</fullName>
            </value>
            <value>
                <fullName>Keogh</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>