unpackaged/main/default/objects/Financial_Account__c/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Code</label>
    <referenceTo>Rep_Code__c</referenceTo>
    <relationshipName>DFPG_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>