unpackaged/main/default/objects/Financial_Account__c/fields/Rep_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code_Name__c</fullName>
    <formula>Rep_Code__r.Name</formula>
    <label>Rep Code</label>
    <type>Text</type>
</CustomField>