unpackaged/main/default/objects/Financial_Account__c/fields/Rider_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Rider_2_Name__c</fullName>
    <label>Rider 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>