unpackaged/main/default/objects/Financial_Account__c/fields/Rider_3_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rider_3_Percent__c</fullName>
    <label>Rider 3 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>