unpackaged/main/default/objects/Financial_Account__c/fields/Run_Wizard_Script__c.field-meta.xml
<CustomField>
    <fullName>Run_Wizard_Script__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Wizard Script</label>
    <type>Checkbox</type>
</CustomField>