unpackaged/main/default/objects/Financial_Account__c/fields/Share_Class_Selected__c.field-meta.xml
<CustomField>
    <fullName>Share_Class_Selected__c</fullName>
    <label>Share Class Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class B Shares</fullName>
            </value>
            <value>
                <fullName>Class C Shares</fullName>
            </value>
            <value>
                <fullName>Class L Shares</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>