unpackaged/main/default/objects/Financial_Account__c/fields/Share_Class_Suitability_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Share_Class_Suitability_Explanation__c</fullName>
    <label>Share Class Suitability Explanation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>