unpackaged/main/default/objects/Financial_Account__c/fields/SOIP_Has_CDSC__c.field-meta.xml
<CustomField>
    <fullName>SOIP_Has_CDSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOIP - Has CDSC</label>
    <type>Checkbox</type>
</CustomField>