unpackaged/main/default/objects/Financial_Account__c/fields/SOIP_Has_Income_Death_Benefits__c.field-meta.xml
<CustomField>
    <fullName>SOIP_Has_Income_Death_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOIP - Has Income/Death Benefits</label>
    <type>Checkbox</type>
</CustomField>