unpackaged/main/default/objects/Financial_Account__c/fields/Source_of_Funds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_Amount__c</fullName>
    <label>Source of Funds Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>