unpackaged/main/default/objects/Financial_Account__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted?</label>
    <type>Checkbox</type>
</CustomField>