unpackaged/main/default/objects/Financial_Account__c/fields/Surrender_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Charge_Amount__c</fullName>
    <label>Surrender Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>