unpackaged/main/default/objects/Financial_Account__c/fields/Third_Party_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Administrator</label>
    <referenceTo>Third_Party_Administrator__c</referenceTo>
    <relationshipName>DFPG_Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>