unpackaged/main/default/objects/Financial_Account__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>