unpackaged/main/default/objects/Financial_Account__c/fields/Will_Purchaser_Pay_Surrender_Charge__c.field-meta.xml
<CustomField>
    <fullName>Will_Purchaser_Pay_Surrender_Charge__c</fullName>
    <label>Will Purchaser Pay Surrender Charge?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>