unpackaged/main/default/objects/Financial_Account__c/fields/X1035_Exchange_within_past_36_months__c.field-meta.xml
<CustomField>
    <fullName>X1035_Exchange_within_past_36_months__c</fullName>
    <label>1035 Exchange within past 36 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>