unpackaged/main/default/objects/Financial_Account__c/fields/X1035_Existing_Company_and_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>X1035_Existing_Company_and_Product_Name__c</fullName>
    <label>1035 Existing Company and Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>