unpackaged/main/default/objects/Financial_Account__c/fields/X1035_Existing_Product_Current_Cash_Valu__c.field-meta.xml
<CustomField>
    <fullName>X1035_Existing_Product_Current_Cash_Valu__c</fullName>
    <label>1035 Existing Product Current Cash Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>