unpackaged/main/default/objects/Financial_Account__c/fields/X1035_Existing_Product_Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>X1035_Existing_Product_Date_Purchased__c</fullName>
    <label>1035 Existing Product Date Purchased</label>
    <type>Date</type>
</CustomField>