unpackaged/main/default/objects/Financial_Account__c/fields/X1035_Existing_Product_Share_Class__c.field-meta.xml
<CustomField>
    <fullName>X1035_Existing_Product_Share_Class__c</fullName>
    <label>1035 Existing Product Share Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>