unpackaged/main/default/objects/Financial_Account__c/fields/X529_Out_of_State_Rationale__c.field-meta.xml
<CustomField>
    <fullName>X529_Out_of_State_Rationale__c</fullName>
    <label>529 Out of State Rationale</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>