unpackaged/main/default/objects/Financial_Account__c/fields/Year_11_Percent__c.field-meta.xml
<CustomField>
    <fullName>Year_11_Percent__c</fullName>
    <label>Year 11 Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>