unpackaged/main/default/objects/Financial_Account__c/fields/Year_12_Percent__c.field-meta.xml
<CustomField>
    <fullName>Year_12_Percent__c</fullName>
    <label>Year 12 Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>