unpackaged/main/default/objects/Financial_Account__c/fields/Years_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Years_Remaining__c</fullName>
    <label>Years Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>