unpackaged/main/default/objects/Financial_Account__c/validationRules/Restrict_Account_Number_Update_if_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Account_Number_Update_if_null</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISBLANK(PRIORVALUE(Account_Number__c)),
NOT($Permission.Senior_Ops))</errorConditionFormula>
    <errorMessage>You cannot edit the Financial Account Number once it is populated.</errorMessage>
</ValidationRule>