unpackaged/main/default/objects/Financial_Account__c/listViews/Accounts.listView-meta.xml
<ListView>
    <fullName>Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Accounts</label>
</ListView>