unpackaged/main/default/objects/Financial_Account__c/listViews/DPIs.listView-meta.xml
<ListView>
    <fullName>DPIs</fullName>
    <columns>NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DPI__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DPIs</label>
</ListView>