unpackaged/main/default/objects/Financial_Account__c/listViews/Incomplete_Flows.listView-meta.xml
<ListView>
    <fullName>Incomplete_Flows</fullName>
    <columns>NAME</columns>
    <columns>Household__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Orion_Custodian_Name_text__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incomplete_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Incomplete Flows</label>
    <sharedTo>
        <group>System_Administrators</group>
    </sharedTo>
</ListView>